--- a/infra/services/service-a-deployment.yaml
+++ b/infra/services/service-a-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: service-a
-  namespace: dev
+  namespace: default
 spec:
   replicas: 2
   selector:
@@ -18,5 +18,6 @@ spec:
         image: redis:7        # ← will be updated automatically
         ports:
         - containerPort: 6379
+
 
 
