--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,4 +46,4 @@ jobs:
           script: |
             echo "📦 Deploying service ${{ github.event.client_payload.service }}"
             kubectl apply -f ~/deployments/infra/services/${{ github.event.client_payload.service }}-deployment.yaml -n default
-            kubectl rollout status deployment/infra/services/${{ github.event.client_payload.service }} -n default
+            kubectl rollout status ~/deployments/infra/services/${{ github.event.client_payload.service }} -n default
