--- a/infra/services/mongo-express-deployment.yaml
+++ b/infra/services/mongo-express-deployment.yaml
@@ -29,10 +29,7 @@ spec:
               name: mongo-secret
               key: mongo-root-password
         - name: ME_CONFIG_MONGODB_SERVER
-          valueFrom:
-            configMapKeyRef:
-              name: mongo-config
-              key: database_url    
+          value: mongo  
 
         - name: ME_CONFIG_BASICAUTH
           value: "false"
