--- a/infra/kub-services/mongo-express-service.yaml
+++ b/infra/kub-services/mongo-express-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: mongo-express
 spec:
-  type: NodePort
+#  type: NodePort
   selector:
     app: mongo-express
   ports:
