--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: CD - Deploy Single Service to Kind (via SSH + SCP)
+name: CD - Deploy Service to Kubernetes (Kind)
 
 on:
   repository_dispatch:
@@ -12,56 +12,54 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Show deployment info
-      - name: Deployment Info
+      # 2️⃣ Show what’s being deployed
+      - name: Show Deployment Info
         run: |
           echo "🚀 Deploying service: ${{ github.event.client_payload.service }}"
-          echo "🖼️ Image: ${{ github.event.client_payload.image }}"
+          echo "🖼️ Using image: ${{ github.event.client_payload.image }}"
 
-      # 3️⃣ Update image inside the service's deployment YAML
-      - name: Update image in deployment
+      # 3️⃣ Update deployment manifest dynamically
+      - name: Update image in YAML
         run: |
           SERVICE=${{ github.event.client_payload.service }}
           IMAGE=${{ github.event.client_payload.image }}
           FILE="infra/services/${SERVICE}-deployment.yaml"
-          if [ -f "$FILE" ]; then
-            sed -i "s|image:.*|image: ${IMAGE}|g" $FILE
-          else
-            echo "❌ File not found: $FILE"
+
+          if [ ! -f "$FILE" ]; then
+            echo "❌ Deployment file $FILE not found!"
             exit 1
           fi
 
-      # 4️⃣ Copy both deployment and service YAMLs to the server
-      # 🧩 Copy secret and service YAMLs to server
-      - name: Copy YAMLs to server
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: |
-            infra/ingress/mongo-express-ingress.yaml,
-            infra/secrets/mongo-secret.yaml,
-            infra/services/${{ github.event.client_payload.service }}-deployment.yaml,
-            infra/kub-services/${{ github.event.client_payload.service }}-service.yaml
-          target: "~/deployments/"
+          echo "✅ Updating $FILE with image $IMAGE"
+          sed -i "s|image:.*|image: ${IMAGE}|g" $FILE
 
-      # 🧩 Apply manifests (Secret + Deployment + Service)
-      - name: Apply manifests on server
-        uses: appleboy/ssh-action@v1.2.0
+      # 4️⃣ Set up kubectl
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v4
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            SERVICE=${{ github.event.client_payload.service }}
-            echo "📦 Applying secret..."
-            kubectl apply -f ~/deployments/infra/secrets/mongo-secret.yaml -n default
-            echo "📦 Deploying service: $SERVICE"
-            kubectl apply -f ~/deployments/infra/services/${SERVICE}-deployment.yaml -n default
-            kubectl apply -f ~/deployments/infra/kub-services/${SERVICE}-service.yaml -n default
-               echo "📦 Applying ingres..."
-            kubectl apply -f ~/deployments/infra/ingress/mongo-express-ingress.yaml -n default
-            echo "⏳ Waiting for rollout..."
-            kubectl rollout status deployment/${SERVICE} -n default
-            echo "✅ Deployment complete for $SERVICE"
+          version: "v1.30.0"
+
+      # 5️⃣ Configure kubeconfig (Kind cluster access)
+      - name: Configure kubeconfig
+        run: |
+          mkdir -p ~/.kube
+          echo "${{ secrets.KUBECONFIG_CONTENT }}" > ~/.kube/config
+          chmod 600 ~/.kube/config
+
+      # 6️⃣ Deploy service to cluster
+      - name: Apply manifests
+        run: |
+          SERVICE=${{ github.event.client_payload.service }}
+          echo "📦 Applying deployment and service for $SERVICE"
+          kubectl apply -f infra/secrets/mongo-secret.yaml
+          kubectl apply -f infra/services/${SERVICE}-deployment.yaml
+          kubectl apply -f infra/kub-services/${SERVICE}-service.yaml
+          kubectl apply -f infra/ingress/mongo-express.yaml
+        
+
+      # 7️⃣ Verify rollout
+      - name: Verify deployment
+        run: |
+          SERVICE=${{ github.event.client_payload.service }}
+          echo "🕒 Checking rollout status..."
+          kubectl rollout status deployment/${SERVICE} -n dev
